--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,7 @@
     --secondary-color: #7a267b;
     --primary-light-color: #f0f3f5;
 }
-
+/*
 .rule-style {
     color: var(--primary-color);
 }
@@ -15,6 +15,11 @@
 }
 .rule-style.operator {
     color: var(--secondary-color);
+}
+*/
+
+ button:disabled {
+    opacity: .3;
 }
 
 
@@ -26,7 +31,7 @@
     content: "";
     position: relative;
     left: 0px;
-    top: 0%;
+    top: 0;
     height: 50%;
     border-left: 2px solid #000;
     border-bottom: 2px solid #000;
