--- a/src/dropSpot.css
+++ b/src/dropSpot.css
@@ -1,21 +1,27 @@
 .drop-child-spot {
-  height: 5px;
-  margin-top: 4px;
+  height: 10px;
+  margin-top: 2px;
   width: 100%;
 }
 .drop-child-spot.drag {
-  height: 40px;
+  height: 70px;
+  background-color: #ddfbdd;
+  border: 1px dashed #000;
+  border-radius: 2px;
 }
 .connection-area {
   width: 12px;
   display: inline-block;
 }
- .connection-area::before {
+.connection-area::before, .connection-area::after {
     content: "";
     position: relative;
     left: 0px;
     top: 0;
-    height: 100%;
+    height: 50%;
     border-left: 2px solid #000;
     display: block;
+}
+.drop-parent-spot.drag .connection-area::before {
+    border-bottom: 2px dotted #000;
 }
