--- a/src/group.css
+++ b/src/group.css
@@ -1,5 +1,19 @@
 @import './main.css';
 
+.readonly-group-start-node {
+  width: 16px;
+  height: 16px;
+  border: 2px solid #000;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 1px;
+  background-color: #fff;
+  z-index: 1;
+  margin-top: 3px;
+}
+
 /* Rule Group */
 .rule-group {
     margin: 12px 16px 8px 0px !important;
